--- a/core/.env
+++ b/core/.env
@@ -1,2 +1,8 @@
 DEBUG=True
 SECRET_KEY=+!p4&q2)70*eab*v)1dw+=d#s08s2zg4o*q)(f_@7w7(aztit6
+
+EMAIL_HOST = 
+EMAIL_HOST_USER = 
+EMAIL_HOST_PASSWORD = 
+EMAIL_PORT = 
+EMAIL_USE_TLS = 
